--- a/src/Components/Widget/Widget.css
+++ b/src/Components/Widget/Widget.css
@@ -12,3 +12,37 @@ h1{
     cursor:pointer;
     text-decoration: underline
 }
+
+.container{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@keyframes flickerAnimation {
+    0%   { opacity:1; }
+    75%  { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-o-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    75%  { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-moz-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    75%  { opacity:0; }
+    100% { opacity:1; }
+  }
+  @-webkit-keyframes flickerAnimation{
+    0%   { opacity:1; }
+    75%  { opacity:0; }
+    100% { opacity:1; }
+  }
+  .animate-flicker {
+     -webkit-animation: flickerAnimation 3s infinite;
+     -moz-animation: flickerAnimation 3s infinite;
+     -o-animation: flickerAnimation 3s infinite;
+      animation: flickerAnimation 3s infinite;
+  }
+
